# SpaceShooterAdventure

./: .gitignore  CMakeLists.txt
config/: config.ini  enemy_config.ini  enemy_wave_config.ini
src/: Bullet.cpp  Bullet.h  BulletPath.cpp  GameEntity.cpp  GameEntity.h  ParallaxLayer.cpp  ParallaxLayer.h  Player.cpp  Player.h  Shooter.cpp  SpriteAnimator.cpp  SpriteAnimator.h  StraightBulletPath.cpp  StraightBulletPath.h  Time.cpp  Time.h  main.cpp
src/bullets/: Bullet.cpp  Bullet.h  Shooter.cpp  Shooter.h  StraightBulletPath.h
src/core/: CollisionManager.cpp  CollisionManager.h  DependencyInjection.cpp  DependencyInjection.h  GameEntity.cpp  GameEntity.h  GameSettings.cpp  GameSettings.h  GameWorld.cpp  GameWorld.h  QuadTree.cpp  QuadTree.h  Time.cpp  Time.h
src/enemy/: Enemy.cpp  Enemy.h  EnemyConfig.cpp  EnemyConfig.h  EnemySpawner.cpp  EnemySpawner.h
src/helpers/: DebugLog.cpp  DebugLog.h  INIReader.cpp  INIReader.h  IniReader.cpp  IniReader.h  Tags.cpp  Tags.h
src/player/: EngineFlame.cpp  EngineFlame.h  Player.cpp  Player.h
src/shooting/: Bullet.cpp  Bullet.h  BulletPath.cpp  BulletPath.h  Shooter.cpp  Shooter.h  ShotgunWeapon.cpp  ShotgunWeapon.h  StraightBulletPath.cpp  StraightBulletWeapon.cpp  StraightBulletWeapon.h  Weapon.h
src/sprites/: ParallaxLayer.cpp  ParallaxLayer.h  SpriteAnimator.cpp  SpriteAnimator.h
